--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
 <body>
 
 <!-- Content will go here -->
+
+    <!-- Navigation -->
+    <nav class="w3-bar w3-black">
+        <a href="#home" class="w3-button w3-bar-item">Home</a>
+        <a href="#about" class="w3-button w3-bar-item">About me</a>
+        <a href="#resume" class="w3-button w3-bar-item">Resume</a>
+        <a href="#resume" class="w3-button w3-bar-item">Projects</a>
+        <a href="#contact" class="w3-button w3-bar-item">Contact</a>
+    </nav>
+
     <p>Hello, World!</p>
 
 </body>
