--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/3/w3.css">
 <body>
 
-<!-- Content will go here -->
-
     <!-- Navigation -->
     <nav class="w3-bar w3-black">
         <a href="#home" class="w3-button w3-bar-item">Home</a>
@@ -15,6 +13,30 @@
         <a href="#resume" class="w3-button w3-bar-item">Projects</a>
         <a href="#contact" class="w3-button w3-bar-item">Contact</a>
     </nav>
+
+    <!-- Slide Show -->
+    <section>
+        <img class="mySlides" src="images/placeholder.png" style="width:100%">
+        <img class="mySlides" src="images/placeholder1.jpeg" style="width:100%">
+    </section>
+
+    <script>
+        // Automatic Slideshow - change image every 3 seconds
+        var myIndex = 0;
+        carousel();
+        
+        function carousel() {
+          var i;
+          var x = document.getElementsByClassName("mySlides");
+          for (i = 0; i < x.length; i++) {
+            x[i].style.display = "none";
+          }
+          myIndex++;
+          if (myIndex > x.length) {myIndex = 1}
+          x[myIndex-1].style.display = "block";
+          setTimeout(carousel, 3000);
+        }
+    </script>
 
     <p>Hello, World!</p>
 
