--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <!-- Navigation -->
     <nav class="w3-bar w3-black">
         <a href="#home" class="w3-button w3-bar-item">Home</a>
-        <a href="#about" class="w3-button w3-bar-item">About me</a>
+        <a href="#about_me" class="w3-button w3-bar-item">About Me</a>
         <a href="#resume" class="w3-button w3-bar-item">Resume</a>
-        <a href="#resume" class="w3-button w3-bar-item">Projects</a>
+        <a href="#projects" class="w3-button w3-bar-item">Projects</a>
         <a href="#contact" class="w3-button w3-bar-item">Contact</a>
     </nav>
 
@@ -40,5 +40,11 @@
 
     <p>Hello, World!</p>
 
+    <!-- Footer -->
+    <footer class="w3-container w3-padding-64 w3-center w3-black w3-xlarge">
+        <a href="https://www.linkedin.com/in/joann-feng/"><i class="fa fa-linkedin"></i></a>
+    </footer>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
 </body>
 </html>
