add description and article section

--- a/index.html
+++ b/index.html
@@ -20,6 +20,40 @@
         <img class="mySlides" src="images/placeholder1.jpeg" style="width:100%">
     </section>
 
+    <!-- Description -->
+    <section class="w3-container w3-center w3-content" style="max-width:600px">
+        <h2 class="w3-wide">WELCOME</h2>
+        <p class="w3-opacity"><i>Explore</i></p>
+        <p class="w3-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+    </section>
+    
+    <!-- Article section -->
+    <section class="w3-row-padding w3-center w3-light-grey">
+        <article class="w3-third">
+        <p>Project 1</p>
+        <img src="#" alt="Placeholder" style="width:100%">
+        <p>Placeholder</p>
+        </article>
+        <article class="w3-third">
+        <p>Project 2</p>
+        <img src="#" alt="Placeholder" style="width:100%">
+        <p>Placeholder</p>
+        </article>
+        <article class="w3-third">
+        <p>Project 3</p>
+        <img src="#" alt="Placeholder" style="width:100%">
+        <p>Placeholder</p>
+        </article>
+    </section>
+
+    <!-- Footer -->
+    <footer class="w3-container w3-padding-64 w3-center w3-black w3-xlarge">
+        <a href="https://www.linkedin.com/in/joann-feng/"><i class="fa fa-linkedin"></i></a>
+    </footer>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
+
+
     <script>
         // Automatic Slideshow - change image every 3 seconds
         var myIndex = 0;
@@ -38,13 +72,5 @@
         }
     </script>
 
-    <p>Hello, World!</p>
-
-    <!-- Footer -->
-    <footer class="w3-container w3-padding-64 w3-center w3-black w3-xlarge">
-        <a href="https://www.linkedin.com/in/joann-feng/"><i class="fa fa-linkedin"></i></a>
-    </footer>
-
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
 </body>
 </html>
