--- a/index.html
+++ b/index.html
@@ -1,24 +1,36 @@
-<!DOCTYPE html>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="/src/styles.css" rel="stylesheet">
+    <title>Joann Feng Portfolio Website</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
+</html>
+
+<!-- <!DOCTYPE html>
 <html>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/3/w3.css">
 <body>
 
-    <!-- Slide Show -->
     <section>
         <img class="mySlides" src="images/placeholder.png" style="width:100%">
         <img class="mySlides" src="images/placeholder1.jpeg" style="width:100%">
     </section>
 
-    <!-- Description -->
     <section class="w3-container w3-center w3-content" style="max-width:600px">
         <h2 class="w3-wide">WELCOME</h2>
         <p class="w3-opacity"><i>Explore</i></p>
         <p class="w3-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
     </section>
     
-    <!-- Article section -->
     <section class="w3-row-padding w3-center w3-light-grey">
         <article class="w3-third">
         <p>Project 1</p>
@@ -56,4 +68,4 @@
     </script>
 
 </body>
-</html>
+</html> -->
